--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         Email - kahkashakhan1417@gmail.com
       </div>
       <div class="items">
-        Phone - +91 8800297781
+        Phone - +91 880*****
       </div>
       <div class="items">
         Instagram - @Kahkasha1711
