--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <h1>Contact Me</h1>
   
       <div class="items">
-        Email - kahkashakhan1417@gmail.com
+        Email - kahkashakhan@gmail.com
       </div>
       <div class="items">
         Phone - +91 880*****
