--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </section>
       <section class="education">
-      <h1>itemscation</h1>
+      <h1>Education</h1>
   
       <div class="items">
         BCA - xyz college
